parser/src/snapshots/rustpython_parser__string__tests__fstring_escaped_newline.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..8,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..8,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 2..4,
                                value: Str(
                                    "\n",
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 0..8,
                                value: Name(
                                    ExprName {
                                        range: 5..6,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
