parser/src/snapshots/rustpython_parser__string__tests__fstring_line_continuation.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..9,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 3..5,
                                value: Str(
                                    "\\\n",
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 0..9,
                                value: Name(
                                    ExprName {
                                        range: 6..7,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
