parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            range: 2..6,
            value: Str(
                "mix ",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 0..38,
            value: Str(
                "user=",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 0..38,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 0..38,
            value: Name(
                ExprName {
                    range: 7..11,
                    id: "user",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 13..28,
            value: Str(
                " with text and ",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 0..38,
            value: Str(
                "second=",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 0..38,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 0..38,
            value: Name(
                ExprName {
                    range: 29..35,
                    id: "second",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
]
