parser/src/snapshots/rustpython_parser__string__tests__fstring_unescaped_newline.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..11,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 4..5,
                                value: Str(
                                    "\n",
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 0..11,
                                value: Name(
                                    ExprName {
                                        range: 6..7,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                conversion: None,
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
