parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_2.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..17,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..17,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 0..16,
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
