parser/src/snapshots/rustpython_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..18,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 0..17,
                                value: Str(
                                    "Hello world",
                                ),
                                kind: Some(
                                    "u",
                                ),
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
